# LeapOfSpace

./: .gitattributes  .gitignore  README.md
.github/workflows/: build.yml
LeapOfSpace/: ContentView.swift  GameStore.swift  GameViews.swift  LeapOfSpaceApp.swift  Models.swift  Planets.json  Questions.json  SpaceComponents.swift
LeapOfSpace.xcodeproj/: project.pbxproj
LeapOfSpace.xcodeproj/xcshareddata/xcschemes/: LeapOfSpace.xcscheme
LeapOfSpace/Assets.xcassets/AccentColor.colorset/: Contents.json
LeapOfSpace/Assets.xcassets/AppIcon.appiconset/: Contents.json
LeapOfSpace/Assets.xcassets/astronaut.imageset/: Contents.json
docs/: prompt.txt
windows/: Makefile  README.md  package-lock.json  package.json
windows/app/: app.js  index.html  styles.css
windows/app/assets/data/: planets.json  questions.json
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/src/: lib.rs  main.rs
